[package]
name = "egui-graph-edit-example"
version = "0.1.0"
authors = ["Kamil Koczurek <koczurekk@gmail.com>", "setzer22"]
edition = "2021"
rust-version = "1.56"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.29.1"
egui-graph-edit = { path = "../egui-graph-edit" }
anyhow = "1.0"
serde = { version = "1.0", optional = true }

[features]
default = []
persistence = ["serde", "egui-graph-edit/persistence", "eframe/persistence"]

[profile.release]
opt-level = 2 # fast and small wasm
