[package]
authors = ["Kamil Koczurek <koczurekk@gmail.com>", "setzer22"]
edition = "2021"
name = "egui-graph-edit-example"
rust-version = "1.56"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
eframe = "0.31"
egui-graph-edit = {path = "../egui-graph-edit"}
serde = {version = "1.0", optional = true}

[features]
default = []
persistence = ["serde", "egui-graph-edit/persistence", "eframe/persistence"]

[profile.release]
opt-level = 2 # fast and small wasm
