[package]
name = "egui-graph-edit"
description = "A helper library to create interactive node graphs using egui"
homepage = "https://github.com/kamirr/egui-graph-edit"
repository = "https://github.com/kamirr/egui-graph-edit"
license = "MIT"
version = "0.5.2"
keywords = ["ui", "egui", "graph", "node"]
authors = ["Kamil Koczurek <koczurekk@gmail.com>", "setzer22"]
edition = "2021"
readme = "../README.md"
workspace = ".."

[features]
persistence = ["serde", "slotmap/serde", "smallvec/serde", "egui/persistence"]

[dependencies]
egui = { version = "0.30" }
slotmap = { version = "1.0" }
smallvec = { version = "1.11.2" }
serde = { version = "1.0", optional = true, features = ["derive"] }
thiserror = "1.0"
