[package]
authors = ["Kamil Koczurek <koczurekk@gmail.com>", "setzer22"]
description = "A helper library to create interactive node graphs using egui"
edition = "2021"
homepage = "https://github.com/kamirr/egui-graph-edit"
keywords = ["ui", "egui", "graph", "node"]
license = "MIT"
name = "egui-graph-edit"
readme = "../README.md"
repository = "https://github.com/kamirr/egui-graph-edit"
version = "0.5.3"
workspace = ".."

[features]
persistence = ["serde", "slotmap/serde", "smallvec/serde", "egui/persistence"]

[dependencies]
egui = {version = "0.31"}
serde = {version = "1.0", optional = true, features = ["derive"]}
slotmap = {version = "1.0"}
smallvec = {version = "1.11.2"}
thiserror = "1.0"
